microservices-ingresscontroller-path/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oneingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: demo.in
    http:
      paths:
        
         -  path: /
            pathType: Prefix
            backend:
              service: frontendsrv
                name: 
                port:
                  number: 80
         -  path: /student
            pathType: Prefix
            backend:
              service: backendsrv
                name: 
                port:
                  number: 8080
